# Music-Player

./: CMakeLists.txt
include/: Application.h  BottomBar.h  Settings.h  SideBar.h
src/: Application.cpp  BottomBar.cpp  Settings.cpp  SideBar.cpp  main.cpp
